# ai-digest

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  modal_app.py  pyproject.toml  sources.yaml
.github/workflows/: deploy.yml
migrations/: 001_init.sql
src/: db.py  high_signal.py  mcp_server.py  scoring.py
src/digest/: selector.py  sender.py  synthesizer.py
src/ingest/: embedder.py  extractor.py  fetcher.py  tagger.py
src/prompts/: digest.md  tagging.md  topic_synthesis.md
