[project]
name = "ai-digest"
version = "0.1.0"
description = "Personal AI digest + knowledge base"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Naman Mehrotra" }]

dependencies = [
  "modal>=0.64.0",
  "anthropic>=0.40.0",
  "voyageai>=0.3.0",
  "resend>=2.0.0",
  "httpx[http2]>=0.27.0",
  "feedparser>=6.0.11",
  "trafilatura>=1.12.0",
  "asyncpg>=0.29.0",
  "pgvector>=0.3.0",
  "markdown>=3.6",
  "pyyaml>=6.0",
  "mcp>=0.9.0",
  "starlette>=0.37.0",
  "python-dateutil>=2.9.0",
  "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
